Update expedition name to include 'Volcán' in Cerro Machín

--- a/bosque-palmas-machin/config.json
+++ b/bosque-palmas-machin/config.json
@@ -1,7 +1,7 @@
 {
   "expedition": {
-    "name": "Expedición Bosque de Palmas & Cerro Machín",
-    "shortName": "Bosque de Palmas & Cerro Machín",
+    "name": "Expedición Bosque de Palmas & Cerro Volcán Machín",
+    "shortName": "Bosque de Palmas & Cerro Volcán Machín",
     "dates": {
       "start": "2025-11-21",
       "end": "2025-11-23",
@@ -112,7 +112,7 @@
       "number": "573045374705",
       "url": "https://wa.me/573045374705",
       "texts": {
-        "registration": "Quiero inscribirme a la Expedición Bosque de Palmas & Cerro Machín (21-23 Nov 2025)",
+        "registration": "Quiero inscribirme a la Expedición Bosque de Palmas & Cerro Volcán Machín (21-23 Nov 2025)",
         "info": "Hola, tengo preguntas sobre la expedición"
       }
     },
@@ -148,7 +148,7 @@
     }
   },
   "seo": {
-    "title": "Expedición Bosque de Palmas & Cerro Machín (21-23 Nov 2025) | 4X4 Travel Eje",
+    "title": "Expedición Bosque de Palmas & Cerro Volcán Machín (21-23 Nov 2025) | 4X4 Travel Eje",
     "description": "Vive un fin de semana 4x4 por el Bosque de Palmas y el volcán Cerro Machín: aventura, paisajes y actividades en grupo. Cupos limitados a 10 vehículos.",
     "keywords": [
       "expedición 4x4",
